<resources>
    <string name="app_name">TickIt</string>
    <string name="sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="membri">Membri</string>
    <string name="proiecte">Proiecte</string>
    <string name="task_uri_deschise">Task-uri deschise</string>
    <string name="task_urile_mele">Task-urile mele</string>
    <string name="dashboard">Dashboard</string>
    <string name="tablou_de_bord">Tablou de bord</string>
    <string name="numarul_de_telefon_nu_a_fost_adaugat">Numarul de telefon nu a fost adaugat.</string>
    <string name="salveaza">Salveaza</string>
    <string name="renunta">Renunta</string>
    <string name="model_nr_telefon">Numar de telefon nou</string>
    <string name="numar_de_telefon_actualiza">Numar de telefon actualizat</string>
    <string name="numar_de_telefon_nu_a_fost_actualizat">Numarul de telefon nu a fost actualizat</string>
    <string name="numar_de_telefon_mai_mult_de_10_cifre">Numarul de telefon trebuie sa aiba 10 cifre.</string>
    <string name="istoric">Istoric</string>
    <string name="strategie">Strategie</string>
    <string name="coordonatori">Coordonatori</string>
    <string name="excel">Excel</string>
    <string name="hint_adrese_mail_membri_noi">Adresele de email se introduc separate printr-o virgula si un spatiu.</string>
    <string name="lista">Lista</string>
    <string name="adauga">Adauga</string>
    <string name="task_uri">Task-uri</string>
    <string name="task_uri_asumate">Task-uri asumate</string>
    <string name="nu_sunt_task_uri_deschise_in_acest_moment">Nu sunt task-uri deschise in acest moment.</string>
    <string name="nu_sunt_task_uri_asumate_pana_in_acest_moment">Nu sunt task-uri asumate pana in acest moment.</string>
    <string name="nume_task">Nume task</string>
    <string name="descriere">Descriere</string>
    <string name="resursa_ex_link_spreadsheet">Resursa (ex: link spreadsheet)</string>
    <string name="ziua_de_start_ex_01_12_2020">Ziua de start (ex: 01-12-2020)</string>
    <string name="deadline_ex_20_12_2020">Deadline (ex: 20-12-2020)</string>
    <string name="numar_necesar_de_voluntari">Numar necesar de voluntari</string>
    <string name="resurse">Resurse</string>
    <string name="imi_asum">Imi asum</string>
    <string name="niciun_membru_nu_si_a_asumat_acest_task_inca">Niciun membru nu si-a asumat acest task inca.</string>
    <string name="slash">/</string>
    <string name="sterge">Sterge</string>
    <string name="editeaza">Editeaza</string>
    <string name="nu_ai_niciun_task_asumat_in_acest_moment">Nu ai niciun task asumat in acest moment.</string>
    <string name="progres">Progres</string>
    <string name="ajutor">Ajutor</string>
    <string name="pe_curand">Pe curand!</string>
    <string name="adauga_editie">Adauga editie</string>
    <string name="ultima_zi_a_editiei_ex_05_04_2020">Ultima zi a editiei (ex: 05-04-2020)</string>
    <string name="cauta_coordonatorii_dupa_email">Cauta coordonatorii dupa email</string>
    <string name="numar_editie_ex_10">Numar editie (ex: 10)</string>
    <string name="link_strategie">Link strategie</string>
    <string name="adauga_membri">Adauga membri</string>
    <string name="cauta_membrii_dupa_email">Cauta membrii dupa email.</string>
    <string name="lider_de_divizie">Lider de divizie</string>
    <string name="adauga_proiect">Adauga proiect</string>
    <string name="nume_proiect">Nume proiect</string>
    <string name="descriere_proiect">Descriere proiect</string>
    <string name="adauga_imagine">Adauga imagine</string>
    <string name="csv">CSV</string>
    <string name="bine_ai_revenit">Bine ai revenit,</string>
    <string name="data_inceput_dupa_data_sfarsit">Data de sfarsit este dupa data de inceput. Format incorect!</string>
    <string name="data_inceput_format_incorect">Data de sfarsit nu a fost introdusa in formatul corect: dd-mm-yyyy.</string>
    <string name="data_inceput_format_incorectt">Data de inceput nu a fost introdusa in formatul corect: dd-mm-yyyy.</string>
    <string name="numar_voluntari_neintrodus">Introduceti numarul de voluntari necesari.</string>
    <string name="descrirerea_task_ului_insuficient_de_lunga">Descrierea task-ului trebuie sa aiba mai mult de 10 caractere.</string>
    <string name="task_uri_minim_3_caractere">Numele task-ului trebuie sa aiba mai mult de 3 caractere.</string>
    <string name="divizie_incorecta">Divizia aleasa nu corespunde cu divizia ta.</string>
    <string name="divizie_neselectata">Alegeti divizia pentru care doriti adaugare task-ului.</string>
    <string name="proiect_neselectatt">Alegeti proiectul pentru care doriti adaugare task-ului.</string>
    <string name="editare_task">\"Editare task \"</string>
    <string name="pe_proiectul">\" pe proiectul \"</string>

    <string-array name="departments">
        <item>Departament</item>
        <item>Educational</item>
        <item>Fundraising</item>
        <item>Human Resources</item>
        <item>Imagine si promovare</item>
        <item>IT</item>
    </string-array>

    <string-array name="BEFunctions">
        <item>Director Educational</item>
        <item>Director Fundraising</item>
        <item>Director Human Resources</item>
        <item>Director Imagine si Promovare</item>
        <item>Director IT</item>
    </string-array>

    <string-array name="BCFunctions">
        <item>Presedinte</item>
        <item>Secretar General</item>
        <item>Vicepresedinte Proiecte</item>
        <item>Vicepresedinte Relatii Academice</item>
        <item>Vicepresedinte Interne</item>
        <item>Vicepresedinte Externe</item>
        <item>Cenzor</item>
    </string-array>
</resources>
