<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    android:orientation="vertical"
    tools:context=".Activities.FragmentsContainer">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tabBackground="@drawable/tabbackground"
        app:tabIndicator="@color/darkblue"
        app:tabSelectedTextColor="@color/darkblue"
        app:tabTextColor="@color/dirty_white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/dashboardTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tablou_de_bord" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/membersTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/membri" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/projectsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proiecte" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/openedTasksTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_uri_deschise" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myTasksTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_urile_mele" />


    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>