<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue">

    <ImageButton
        android:id="@+id/backButtonAddEdition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_background_medium"
        android:foreground="@drawable/ripple_round_effect_button"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleTextViewAddEdition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/colombia"
        android:gravity="center"
        android:text="@string/adauga_editie"
        android:textColor="@color/dirty_white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButtonAddEdition"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editionStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/vivid_cyan"
        android:digits="0123456789-"
        android:hint="@string/ziua_de_start_ex_01_12_2020"
        android:inputType="number|textPassword|date"
        android:textColor="@color/dirty_white"
        android:textColorHint="#46E1EFE6"
        android:textCursorDrawable="@color/dirty_white"
        app:layout_constraintBottom_toTopOf="@+id/addEditionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewAddEdition"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editionStopDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/vivid_cyan"
        android:digits="0123456789-"
        android:hint="@string/ultima_zi_a_editiei_ex_05_04_2020"
        android:inputType="number|textPassword|date"
        android:textColor="@color/dirty_white"
        android:textColorHint="#46E1EFE6"
        android:textCursorDrawable="@color/dirty_white"
        app:layout_constraintBottom_toTopOf="@+id/addEditionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editionStartDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/selectedCoordinators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/colombia"
        android:text="@string/coordonatori"
        android:textColor="@color/dirty_white"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/addEditionButton"
        app:layout_constraintEnd_toStartOf="@+id/deleteSelectedCoordinatorsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBarEditTextAddEdition"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/deleteSelectedCoordinatorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_background_small"
        android:src="@drawable/ic_delete_black_24dp"
        android:foreground="@drawable/ripple_round_effect_button"
        app:layout_constraintBottom_toTopOf="@+id/searchCoordinatorListview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBarEditTextAddEdition" />

    <EditText
        android:id="@+id/searchBarEditTextAddEdition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/vivid_cyan"
        android:drawableStart="@drawable/search"
        android:hint="@string/cauta_coordonatorii_dupa_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/dirty_white"
        android:textColorHint="#46E1EFE6"
        android:textCursorDrawable="@color/dirty_white"
        app:layout_constraintBottom_toTopOf="@+id/addEditionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editionStopDate"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/searchCoordinatorListview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addEditionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedCoordinators" />


    <Button
        android:id="@+id/addEditionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/square_background"
        android:fontFamily="@font/colombia"
        android:foreground="@drawable/ripple_square_effect_button"
        android:text="@string/adauga"
        android:textAllCaps="false"
        android:textColor="@color/dirty_white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewAddEdition"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>