<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask"
    android:background="@color/darkblue">

    <ImageButton
        android:id="@+id/backButtonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_background_medium"
        android:foreground="@drawable/ripple_round_effect_button"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/colombia"
        android:text="Adauga task"
        android:textColor="@color/dirty_white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerProjectAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/vivid_cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskNameTextView"
        app:layout_constraintVertical_bias="0.100000024" />

    <Spinner
        android:id="@+id/spinnerDivisionAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/vivid_cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProjectAddTask"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/taskNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/vivid_cyan"
        android:hint="@string/nume_task"
        android:inputType="text"
        android:textColor="@color/dirty_white"
        android:textColorHint="#46E1EFE6"
        android:textCursorDrawable="@color/dirty_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDivisionAddTask"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/taskDescriptionEditText"
        android:hint="@string/descriere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/vivid_cyan"
        android:inputType="text"
        android:textColor="@color/dirty_white"
        android:textColorHint="#46E1EFE6"
        android:textCursorDrawable="@color/dirty_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskNameEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/taskResourceEditText"
        android:hint="@string/resursa_ex_link_spreadsheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/vivid_cyan"
        android:inputType="textUri"
        android:textColor="@color/dirty_white"
        android:textColorHint="#46E1EFE6"
        android:textCursorDrawable="@color/dirty_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDescriptionEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/taskStartDate"
        android:hint="@string/ziua_de_start_ex_01_12_2020"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/vivid_cyan"
        android:inputType="number|textPassword|date"
        android:digits="0123456789/"
        android:textColor="@color/dirty_white"
        android:textColorHint="#46E1EFE6"
        android:textCursorDrawable="@color/dirty_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskMaxNoOfVolunteers"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/taskStopDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/vivid_cyan"
        android:hint="@string/deadline_ex_20_12_2020"
        android:inputType="number|textPassword|date"
        android:digits="0123456789/"
        android:textColor="@color/dirty_white"
        android:textColorHint="#46E1EFE6"
        android:textCursorDrawable="@color/dirty_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskStartDate"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/taskMaxNoOfVolunteers"
        android:hint="@string/numar_necesar_de_voluntari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/vivid_cyan"
        android:inputType="numberDecimal"
        android:textColor="@color/dirty_white"
        android:textColorHint="#46E1EFE6"
        android:textCursorDrawable="@color/dirty_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskResourceEditText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/square_background"
        android:fontFamily="@font/colombia"
        android:foreground="@drawable/ripple_square_effect_button"
        android:text="@string/salveaza"
        android:textAllCaps="false"
        android:textColor="@color/dirty_white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskStopDate" />

</androidx.constraintlayout.widget.ConstraintLayout>